# todo_manager

./: pyproject.toml
todo_manager/: app.py  models.py
